--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Simple Budget</a>
-            <a href="comp.html">Compound Budget</a>
-            <a href="re.html">Resources</a>
+            <a href="frontend/index.html">Simple Budget</a>
+            <a href="frontend/comp.html">Compound Budget</a>
+            <a href="frontend/re.html">Resources</a>
             <a href="https://github.com/STORMTR00P3R/BetWise">
                 <svg style="height: 1rem" class="icon" viewBox="0 0 32 32">
                     <path
@@ -60,8 +60,8 @@
         <small>© 2024 BetWise. All rights reserved. GNU GPLv3.</small>
     </footer>
 
-    <script src="js/account.js"></script>
-    <script src="js/app.js"></script>
+    <script src="frontend/js/account.js"></script>
+    <script src="frontend/js/app.js"></script>
 </body>
 
 </html>
