--- a/public/comp.html
+++ b/public/comp.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <title>Resources</title>
 </head>
 
@@ -28,6 +29,18 @@
     </header>
     <main>
 
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Are you sure you wanna delete this?</p>
+            <button id="yes">Yes</button>
+            <button id="no">No</button>
+        </div>
+
+        </div>
 
         <div class="w3-light-grey w3-round">
             <div id="myBar" class="w3-container w3-round w3-red" style="width:0%; padding:0%; color:#212121!important;">
