--- a/public/comp.html
+++ b/public/comp.html
@@ -32,13 +32,26 @@
         <!-- The Modal -->
         <div id="myModal" class="modal">
 
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Are you sure you wanna delete this?</p>
-            <button id="yes">Yes</button>
-            <button id="no">No</button>
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Are you sure you wanna delete this?</p>
+                <button id="yes">Yes</button>
+                <button id="no">No</button>
+            </div>
+
         </div>
+
+        <div id="editModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <form>
+                    <input id="editAmount"></input>
+                    <button id="saveButton" type="submit">Save Edit</button>
+                </form>
+            </div>
 
         </div>
 
