--- a/public/comp.html
+++ b/public/comp.html
@@ -47,8 +47,9 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <form>
+                <form id="eForm">
                     <input id="editAmount"></input>
+                    <select name="formDrop" id="formDrop"></select>
                     <button id="saveButton" type="submit">Save Edit</button>
                 </form>
             </div>
