--- a/public/comp.html
+++ b/public/comp.html
@@ -68,7 +68,7 @@
         <h4>
             Balance: <strong>$<span id="newB">0</span></strong>
         </h4>
-        <h5>Budget: <input id="newBudget" type="text" /></h5>
+        <h5>Budget: <input id="newBudget" type="text" /></h`5>
         <button id="Achange">Add</button>
 
         <h5>Add Expenses: <input id="newExp" type="text" /></h5>
