--- a/public/comp.html
+++ b/public/comp.html
@@ -35,7 +35,7 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <p>Are you sure you wanna delete this?</p>
+                <p class="mText">Are you sure you wanna delete this?</p>
                 <button id="yes">Yes</button>
                 <button id="no">No</button>
             </div>
