--- a/public/re.html
+++ b/public/re.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <nav>
-            <a href="/">Simple Budget</a>
-            <a href="#">Compound Budget</a>
+            <a href="index.html">Simple Budget</a>
+            <a href="comp.html">Compound Budget</a>
             <a href="re.html">Resources</a>
             <a href="https://github.com/STORMTR00P3R/BetWise"><svg style="height: 1rem" class="icon"
                     viewBox="0 0 32 32">
